# rust-for-rustaceans

./: Cargo.toml
ch7_proc_macro_impl/: Cargo.toml
ch7_proc_macro_impl/src/: lib.rs
examples/: ch10_concurrency.rs  ch10_concurrency_rayon.rs  ch10_concurrency_tokio.rs  ch3_closure_scoped.rs  ch3_enumeration.rs  ch3_never_type.rs  ch3_opaque.rs  ch3_thread_panic.rs  ch3_try_block.rs  ch3_unit_error.rs  ch6_miri.rs  ch6_mocking.rs  ch6_test_only_api.rs  ch7_attribute_macro.rs  ch7_declarative_macro.rs  ch7_derive_macro.rs  ch7_function_like.rs  ch7_macro_hygene.rs  ch9_maybeuninit.rs  ch9_miri_mutablepointers.rs  ch9_miri_oob.rs  ch9_miri_uninitmem.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ch6_fuzzing.rs
